--- a/Company/registration.html
+++ b/Company/registration.html
@@ -20,11 +20,11 @@
             <label class="bold" for="password">Votre mot de passe</label>
             <input id="password" type="password" name="password" class="field" placeholder="******" required>
             <label class="bold" for="password">Confirmez votre mot de passe</label>
-            <input id="password" type="password" name="password" class="field" placeholder="******" required>
+            <input id="confirmPassword" type="password" name="confirmPassword" class="field" placeholder="******" required>
             <label class="bold" for="phone">Votre numéro de téléphone</label>
             <input id="phone" type="text" name="phone" class="field" placeholder="0600000000" required>
             <p class="legend">Nous utilisons la double authentification pour garantir la sécurité de vos données. Seuls des sms de connexion pourront vous être adressés.</p>
-            <a href="registration_confirmation.html" class="button">S'inscrire</a>
+            <button class="button" id="registrationButton">S'inscrire</button>
         </div>
 
         <footer id="siteFooter">
@@ -40,5 +40,6 @@
         
         <script src="../js/footer.js"></script>
         
+        <script src="../js/registration.js"></script>
     </body>
 </html>
