Rename pour meilleure cohérence + début gestion docteur admin

--- a/Account/appointment_results.html
+++ b/Account/appointment_results.html
@@ -25,14 +25,14 @@
 
         <!-- Appel des scripts -->
 
-        <script src="../js/header.js"></script>
+        <script src="../js/Company/header.js"></script>
         <script> 
             initHeader("headerAccount.html", "../style/Account/style_HeaderAccount.css"); 
         </script>
         
-        <script src="../js/footer.js"></script>
+        <script src="../js/Company/footer.js"></script>
         
-        <script src="../js/auth.js"></script>
+        <script src="../js/Company/auth.js"></script>
 
         <script>
             initPage({
@@ -42,12 +42,12 @@
             });
         </script>
 
-        <script src="../js/appointment_results.js"></script>
+        <script src="../js/Account/appointment_results.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', getAppointmentResults);
         </script>
 
-        <script src="../js/appointment_modifyLastSearch.js"></script>
+        <script src="../js/Account/appointment_modifyLastSearch.js"></script>
 
     </body>
 </html>
