--- a/Admin/accountAdmin.html
+++ b/Admin/accountAdmin.html
@@ -17,11 +17,11 @@
             <div class="module">
                 <h2>Ajouter ou modifier</h2>
                 <div class="boutonContainer">
-                    <a href="specialist.html" class="bouton">Spécialistes</a>
-                    <a href="specialty.html" class="bouton">Spécialité</a>
+                    <a href="doctor.html" class="bouton">Spécialistes</a>
+                    <a href="treatment.html" class="bouton">Spécialité</a>
                     <a href="center.html" class="bouton">Etablissement</a>
                 </div>
-                <h2>Accéder aux demandes de création du personnel administratif et médical</h2>
+                <h2>Accéder aux demandes de création ou modifications</h2>
                 <div class="boutonContainer">
                     <a href="request.html" class="bouton">Accéder aux demandes</a>
                 </div>
@@ -33,14 +33,14 @@
 
         <!-- Appel des scripts -->
         
-        <script src="../js/header.js"></script>
+        <script src="../js/Company/header.js"></script>
         <script>
             initHeader("headerAdmin.html", "../style/Admin/style_headerAdmin.css");
         </script>
         
-        <script src="../js/footer.js"></script>
+        <script src="../js/Company/footer.js"></script>
 
-        <script src="../js/auth.js"></script>
+        <script src="../js/Company/auth.js"></script>
         <script>
             initPage({
                 headerPath: "headerAdmin.html",
