--- a/Admin/headerAdmin.html
+++ b/Admin/headerAdmin.html
@@ -7,8 +7,8 @@
 
     <div class="headerAdminLinks">
         <a href="accountAdmin.html">Accueil</a>
-        <a href="specialist.html">Spécialistes</a>
-        <a href="specialty.html">Spécialités</a>
+        <a href="doctor.html">Spécialistes</a>
+        <a href="treatment.html">Spécialités</a>
         <a href="center.html">Centres</a>
         <a href="request.html">Demandes</a>
         <button id="logoutButton"><img class="icon" src="../images/icons/Icon_disconnect.png"> Se déconnecter</button>
