--- a/Company/connexion.html
+++ b/Company/connexion.html
@@ -41,14 +41,14 @@
 
         <!-- Appel des scripts -->
         
-        <script src="../js/header.js"></script>
+        <script src="../js/Company/header.js"></script>
         <script>
             initHeader("headerCompany.html", "../style/Company/style_headerCompany.css");
         </script>
 
-        <script src="../js/footer.js"></script>
+        <script src="../js/Company/footer.js"></script>
 
-        <script src="../js/login.js"></script>
+        <script src="../js/Company/login.js"></script>
 
     </body>
 </html>
