--- a/Admin/doctor_add.html
+++ b/Admin/doctor_add.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style/style.css">
-        <link rel="stylesheet" href="../style/Admin/style_specialist.css">
+        <link rel="stylesheet" href="../style/Admin/style_doctor.css">
         <title>HealthNorth - Accueil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="HealthNorth - Leader de la santé depuis 1987">
@@ -88,7 +88,7 @@
                     <input type="time" id="dimancheApremFin" name="dimancheApremFin" min="00:00" max="24:00"/>
                 </div>
                 <div class="boutonContainer">
-                    <a href="specialist_change_confirmation.html" class="bouton">Modifier</a>
+                    <a href="specialist_add_confirmation.html" class="bouton">Ajouter à la base de données</a>
                 </div>
             </div>
         </div>
@@ -98,14 +98,14 @@
 
         <!-- Appel des scripts -->
         
-        <script src="../js/header.js"></script>
+        <script src="../js/Company/header.js"></script>
         <script>
             initHeader("headerAdmin.html", "../style/Admin/style_headerAdmin.css");
         </script>
         
-        <script src="../js/footer.js"></script>
+        <script src="../js/Company/footer.js"></script>
 
-        <script src="../js/auth.js"></script>
+        <script src="../js/Company/auth.js"></script>
         <script>
             initPage({
                 headerPath: "headerAdmin.html",
