--- a/Admin/treatment_change.html
+++ b/Admin/treatment_change.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style/style.css">
-        <link rel="stylesheet" href="../style/Admin/style_specialty.css">
+        <link rel="stylesheet" href="../style/Admin/style_treatment.css">
         <title>HealthNorth - Accueil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="HealthNorth - Leader de la santé depuis 1987">
@@ -15,11 +15,18 @@
         <div class="container">
             <h1>Espace administrateur</h1>
             <div class="module">
-                <h2>La spécialité a bien été modifiée.</h2>
-                <div class="boutonContainer">
-                    <a href="accountAdmin.html" class="bouton">Retour à l'accueil</a>
+                <h2>Modifier une spécialité</h2>
+                <div class="grid">
+                    <label for="name">Nom de la spécialité</label>
+                    <input id="name" type="text" placeholder="Nom de la spécialité">
+                    <label for="category">Catégorie</label>
+                    <input id="category" type="text" placeholder="Nom de la catégorie">
+                    <label for="duration">Durée approximative</label>
+                    <input id="duration" type="time">
                 </div>
-            </div>
+                <div class="boutonContainer">
+                    <a href="treatment_change_confirmation.html" class="bouton">Modifier</a>
+                </div>
         </div>
 
         <footer id="siteFooter">
