--- a/Admin/treatment_change_confirmation.html
+++ b/Admin/treatment_change_confirmation.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style/style.css">
-        <link rel="stylesheet" href="../style/Admin/style_specialist.css">
+        <link rel="stylesheet" href="../style/Admin/style_treatment.css">
         <title>HealthNorth - Accueil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="HealthNorth - Leader de la santé depuis 1987">
@@ -15,32 +15,16 @@
         <div class="container">
             <h1>Espace administrateur</h1>
             <div class="module">
-                <div>
-                    <h2>Rechercher un spécialiste</h2>
-                    <div class="form">
-                        <label for="specialist">Nom du spécialiste</label>
-                        <input id="specialist" type="text" class="shortField" placeholder="Prénom Nom">
-                    </div>
-                </div>
-
-                <div class="sousModule">
-                    <div>
-                        <h3>Il n'existe pas ? Créez-le !</h3>
-                        <a href="specialist_add.html" class="bouton">Ajouter un spécialiste</a>
-                    </div>
-                    <div class="traitHorizontal">
-                    </div>
-                    <div>
-                        <h3>Il existe ? Consultez les détails.</h3>
-                        <a href="specialist_change.html" class="bouton">Modifier le spécialiste</a>
-                    </div>
+                <h2>La spécialité a bien été modifiée.</h2>
+                <div class="boutonContainer">
+                    <a href="accountAdmin.html" class="bouton">Retour à l'accueil</a>
                 </div>
             </div>
         </div>
 
         <footer id="siteFooter">
         </footer>
-        
+
         <!-- Appel des scripts -->
         
         <script src="../js/header.js"></script>
