--- a/Admin/doctor_change.html
+++ b/Admin/doctor_change.html
@@ -26,7 +26,7 @@
                     <label for="phoneNumber">Téléphone</label>
                     <input id="phoneNumber" type="phone" placeholder="0600000000">
                     <label for="center">Etablissement</label>
-                    <input type="text" id="center" placeholder="Nom de l'établissement">
+                    <input id="center" type="text" placeholder="Nom de l'établissement">
                     <label for="treatment">Actes pratiqués</label>
                     <input id="treatment" type="text" placeholder="Nom de l'acte">
                 </div>
@@ -87,7 +87,7 @@
                     <input type="time" id="sundayEndPM" name="sundayEndPM" min="00:00" max="24:00"/>
                 </div>
                 <div class="boutonContainer">
-                    <a href="doctor_change_confirmation.html" class="bouton">Ajouter à la base de données</a>
+                    <a href="doctor_change_confirmation.html" class="bouton">Modifier dans la base de données</a>
                 </div>
             </div>
         </div>
