--- a/Admin/doctor_add.html
+++ b/Admin/doctor_add.html
@@ -21,18 +21,26 @@
                     <input id="firstname" type="text" placeholder="Prénom">
                     <label for="lastname">Nom du spécialiste</label>
                     <input id="lastname" type="text" placeholder="Nom">
+                    <label for="password">Mot de passe</label>
+                    <input id="password" type="password" placeholder="********">
                     <label for="email">Email</label>
                     <input id="email" type="email" placeholder="email@example.fr">
-                    <label for="phone">Téléphone</label>
-                    <input id="phone" type="phone" placeholder="0600000000">
+                    <label for="phoneNumber">Téléphone</label>
+                    <input id="phoneNumber" type="phone" placeholder="0600000000">
                     <label for="center">Etablissement</label>
-                    <input type="text" id="center" placeholder="Nom de l'établissement">
-                    <label for="specialty">Spécialité</label>
-                    <input id="specialty" type="text" placeholder="Nom de la spécialité">
-                    <label for="actes">Actes pratiqués</label>
-                    <input id="actes" type="text" placeholder="Nom de l'acte">
+                    <div class="wrapperCenter">
+                        <input id="center" type="text" placeholder="Nom de l'établissement">
+                        <ul id="suggestionsCenter"></ul>
+                    </div>
+                    <label for="treatment">Actes pratiqués</label>
+                    <div class="wrapperTreatment">
+                        <input id="treatment" type="text" placeholder="Nom de l'acte">
+                        <button class="addButton" id="addButton"><img src='../images/icons/Icon_add.png'></button>
+                        <ul id="suggestionsTreatment"></ul>
+                    </div>
                 </div>
                 <h3>Actes déjà ajoutés</h3>
+                <div id="treatments"></div>
 
                 <div class="dispo">
                     <h3>Disponibilités</h3>
@@ -44,51 +52,51 @@
                     <p class="legend gridAM">Matin</p>
                     <p class="legend gridPM">Après-midi</p>
 
-                    <input id="lundi" type="checkbox">
-                    <label for="lundi">Lundi</label>
-                    <input type="time" id="lundiMatinDebut" name="lundiMatinDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="lundiMatinFin" name="lundiMatinFin" min="00:00" max="24:00"/>
-                    <input type="time" id="lundiApremDebut" name="lundiApremDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="lundiApremFin" name="lundiApremFin" min="00:00" max="24:00"/>
-                    <input id="mardi" type="checkbox">
-                    <label for="mardi">Mardi</label>
-                    <input type="time" id="mardiMatinDebut" name="mardiMatinDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="mardiMatinFin" name="mardiMatinFin" min="00:00" max="24:00"/>
-                    <input type="time" id="mardiApremDebut" name="mardiApremDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="mardiApremFin" name="mardiApremFin" min="00:00" max="24:00"/>
-                    <input id="mercredi" type="checkbox">
-                    <label for="mercredi">Mercredi</label>
-                    <input type="time" id="mercrediMatinDebut" name="mercrediMatinDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="mercrediMatinFin" name="mercrediMatinFin" min="00:00" max="24:00"/>
-                    <input type="time" id="mercrediApremDebut" name="mercrediApremDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="mercrediApremFin" name="mercrediApremFin" min="00:00" max="24:00"/>
-                    <input id="jeudi" type="checkbox">
-                    <label for="jeudi">Jeudi</label>
-                    <input type="time" id="jeudiMatinDebut" name="jeudiMatinDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="jeudiMatinFin" name="jeudiMatinFin" min="00:00" max="24:00"/>
-                    <input type="time" id="jeudiApremDebut" name="jeudiApremDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="jeudiApremFin" name="jeudiApremFin" min="00:00" max="24:00"/>
-                    <input id="vendredi" type="checkbox">
-                    <label for="vendredi">Vendredi</label>
-                    <input type="time" id="vendrediMatinDebut" name="vendrediMatinDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="vendrediMatinFin" name="vendrediMatinFin" min="00:00" max="24:00"/>
-                    <input type="time" id="vendrediApremDebut" name="vendrediApremDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="vendrediApremFin" name="vendrediApremFin" min="00:00" max="24:00"/>
-                    <input id="samedi" type="checkbox">
-                    <label for="samedi">Samedi</label>
-                    <input type="time" id="samediMatinDebut" name="samediMatinDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="samediMatinFin" name="samediMatinFin" min="00:00" max="24:00"/>
-                    <input type="time" id="samediApremDebut" name="samediApremDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="samediApremFin" name="samediApremFin" min="00:00" max="24:00"/>
-                    <input id="dimanche" type="checkbox">
-                    <label for="dimanche">Dimanche</label>
-                    <input type="time" id="dimancheMatinDebut" name="dimancheMatinDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="dimancheMatinFin" name="dimancheMatinFin" min="00:00" max="24:00"/>
-                    <input type="time" id="dimancheApremDebut" name="dimancheApremDebut" min="00:00" max="24:00"/>
-                    <input type="time" id="dimancheApremFin" name="dimancheApremFin" min="00:00" max="24:00"/>
+                    <input id="monday" type="checkbox">
+                    <label for="monday">Lundi</label>
+                    <input type="time" id="mondayStartAM" name="mondayStartAM" min="00:00" max="24:00"/>
+                    <input type="time" id="mondayEndAM" name="mondayEndAM" min="00:00" max="24:00"/>
+                    <input type="time" id="mondayStartPM" name="mondayStartPM" min="00:00" max="24:00"/>
+                    <input type="time" id="mondayEndPM" name="mondayEndPM" min="00:00" max="24:00"/>
+                    <input id="tuesday" type="checkbox">
+                    <label for="tuesday">Mardi</label>
+                    <input type="time" id="tuesdayStartAM" name="tuesdayStartAM" min="00:00" max="24:00"/>
+                    <input type="time" id="tuesdayEndAM" name="tuesdayEndAM" min="00:00" max="24:00"/>
+                    <input type="time" id="tuesdayStartPM" name="tuesdayStartPM" min="00:00" max="24:00"/>
+                    <input type="time" id="tuesdayEndPM" name="tuesdayEndPM" min="00:00" max="24:00"/>
+                    <input id="wednesday" type="checkbox">
+                    <label for="wednesday">Mercredi</label>
+                    <input type="time" id="wednesdayStartAM" name="wednesdayStartAM" min="00:00" max="24:00"/>
+                    <input type="time" id="wednesdayEndAM" name="wednesdayEndAM" min="00:00" max="24:00"/>
+                    <input type="time" id="wednesdayStartPM" name="wednesdayStartPM" min="00:00" max="24:00"/>
+                    <input type="time" id="wednesdayEndPM" name="wednesdayEndPM" min="00:00" max="24:00"/>
+                    <input id="thursday" type="checkbox">
+                    <label for="thursday">Jeudi</label>
+                    <input type="time" id="thursdayStartAM" name="thursdayStartAM" min="00:00" max="24:00"/>
+                    <input type="time" id="thursdayEndAM" name="thursdayEndAM" min="00:00" max="24:00"/>
+                    <input type="time" id="thursdayStartPM" name="thursdayStartPM" min="00:00" max="24:00"/>
+                    <input type="time" id="thursdayEndPM" name="thursdayEndPM" min="00:00" max="24:00"/>
+                    <input id="friday" type="checkbox">
+                    <label for="friday">Vendredi</label>
+                    <input type="time" id="fridayStartAM" name="fridayStartAM" min="00:00" max="24:00"/>
+                    <input type="time" id="fridayEndAM" name="fridayEndAM" min="00:00" max="24:00"/>
+                    <input type="time" id="fridayStartPM" name="fridayStartPM" min="00:00" max="24:00"/>
+                    <input type="time" id="fridayEndPM" name="fridayEndPM" min="00:00" max="24:00"/>
+                    <input id="saturday" type="checkbox">
+                    <label for="saturday">Samedi</label>
+                    <input type="time" id="saturdayStartAM" name="saturdayStartAM" min="00:00" max="24:00"/>
+                    <input type="time" id="saturdayEndAM" name="saturdayEndAM" min="00:00" max="24:00"/>
+                    <input type="time" id="saturdayStartPM" name="saturdayStartPM" min="00:00" max="24:00"/>
+                    <input type="time" id="saturdayEndPM" name="saturdayEndPM" min="00:00" max="24:00"/>
+                    <input id="sunday" type="checkbox">
+                    <label for="sunday">Dimanche</label>
+                    <input type="time" id="sundayStartAM" name="sundayStartAM" min="00:00" max="24:00"/>
+                    <input type="time" id="sundayEndAM" name="sundayEndAM" min="00:00" max="24:00"/>
+                    <input type="time" id="sundayStartPM" name="sundayStartPM" min="00:00" max="24:00"/>
+                    <input type="time" id="sundayEndPM" name="sundayEndPM" min="00:00" max="24:00"/>
                 </div>
                 <div class="boutonContainer">
-                    <a href="doctor_add_confirmation.html" class="bouton">Ajouter à la base de données</a>
+                    <a href="doctor_add_confirmation.html" class="bouton" id="buttonAddDoctor">Ajouter à la base de données</a>
                 </div>
             </div>
         </div>
@@ -113,6 +121,18 @@
                 allowedRoles: ['ROLE_ADMIN', 'ROLE_DOCTOR']
             });
         </script>
+
+        <script src="../js/Admin/doctor_results_centers.js"></script>
+        <script>
+            initAutocompleteCenter();
+        </script>
+
+        <script src="../js/Admin/doctor_results_treatments.js"></script>
+        <script>
+            initAutocompleteTreatment();
+        </script>
+
+        <script src="../js/Admin/doctor_add.js"></script>
 
     </body>
 </html>
